--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -28,3 +28,8 @@ Before you begin the upgrade process, review the following considerations to pla
 [role="_additional-resources"]
 .Additional resources
 * <<editing-inventory-file-for-updates_{context}, Setting up the inventory file >>
+
+[discrete]
+== {EDAcontroller}
+
+* If you plan to deploy {EDAcontroller}, it is recommended that you disable all current {PlatformNameShort} activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new {EDAName} activations run after the upgrade process has completed. 
