AAP-14712 Added a statement about disabling activations for EDA deployment

--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -32,4 +32,4 @@ Before you begin the upgrade process, review the following considerations to pla
 [discrete]
 == {EDAcontroller}
 
-* If you plan to deploy {EDAcontroller}, it is recommended that you disable all current {PlatformNameShort} activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new {EDAName} activations run after the upgrade process has completed. 
+* If you plan to deploy {EDAcontroller}, it is recommended that you disable all current {PlatformNameShort} activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new activations run after the upgrade process has completed. 
