--- a/downstream/modules/platform/con-controller-additional-settings.adoc
+++ b/downstream/modules/platform/con-controller-additional-settings.adoc
@@ -6,4 +6,4 @@ There are additional advanced settings that can affect {ControllerName} behavior
 	
 For traditional virtual machine based deployments, these settings can be provided to {ControllerName} by creating a file in `/etc/tower/conf.d/custom.py`. When settings are provided to {ControllerName} through file-based settings, the setting file must be present on all control plane nodes. These include all of the hybrid or control type nodes in the `automationcontroller` group in the installer inventory. 
 
-For these settings to be effective, restart the service with `automation-controller-service` restart on each node with the settings file. If the settings provided in this file are also visible in the UI, then they are marked as "Read only" in the UI.
+For these settings to be effective, restart the service with `automation-controller-service` restart on each node with the settings file. If the settings provided in this file are also visible in the {ControllerName} UI, then they are marked as "Read only" in the UI.
