--- a/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
+++ b/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
@@ -15,7 +15,7 @@ Once the installation completes, these are the default protocol and ports used:
 
 * Port 444 for automation hub
 
-* Port 445 for EDA controller
+* Port 445 for {EDAcontroller}
 
 These can be changed. Consult the *README.md* for further details. It is recommended that you leave the defaults unless you need to change them due to port conflicts or other factors.
 
