AAP-18896 Added miscellaneous attributes and correct format for note

--- a/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
+++ b/downstream/modules/platform/ref-accessing-control-auto-hub-eda-control.adoc
@@ -21,7 +21,7 @@ These can be changed. Consult the *README.md* for further details. It is recomme
 
 [NOTE]
 ====
- Port 445 has been known to be blocked by some ISPs. If port 445 is blocked, please refer to the *README.md* file for more information on changing port values. 
+Port 445 has been known to be blocked by some ISPs. If port 445 is blocked, refer to the *README.md* file for more information on changing port values.  
 ====
 
 .Accessing {ControllerName} UI
