--- a/downstream/modules/platform/con-aap-example-architecture.adoc
+++ b/downstream/modules/platform/con-aap-example-architecture.adoc
@@ -14,10 +14,10 @@ The architecture for this example consists of the following:
 
 * A two node {ControllerName} cluster
 * An optional hop node to connect {ControllerName} to execution nodes
-* A two node automation hub cluster
+* A two node {HubName} cluster
 * A single node {EDAcontroller} cluster
 * A single PostgreSQL database connected to the {ControllerName}, {HubName}, and {EDAcontroller} clusters
-* Two execution nodes per automation controller cluster
+* Two execution nodes per  {ControllerName} cluster
 
 .Example {PlatformNameShort} {PlatformVers} architecture
 // dcd - Image in progress with graphics team and will be added once complete.
