AAP-14712 Added a hidden comment to remove the new content for next release of AAP

--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -31,5 +31,6 @@ Before you begin the upgrade process, review the following considerations to pla
 
 [discrete]
 == {EDAcontroller}
+//ATTENTION: Remove this section for AAP 2.5; customers will no longer need to perform deactivation because services will be automatically restored after upgrade and migration. 
 
 * If you plan to deploy {EDAcontroller}, it is recommended that you disable all current {PlatformNameShort} activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new activations run after the upgrade process has completed. This prevents possibilities of orphaned containers running previous version activations.
