--- a/downstream/modules/platform/con-aap-upgrade-planning.adoc
+++ b/downstream/modules/platform/con-aap-upgrade-planning.adoc
@@ -33,4 +33,4 @@ Before you begin the upgrade process, review the following considerations to pla
 == {EDAcontroller}
 //ATTENTION: Remove this section for AAP 2.5; customers will no longer need to perform deactivation because services will be automatically restored after upgrade and migration. 
 
-* If you plan to deploy {EDAcontroller}, it is recommended that you disable all current {PlatformNameShort} activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new activations run after the upgrade process has completed. This prevents possibilities of orphaned containers running previous version activations.
+* If you are currently running {EDAcontroller} and plan to deploy it when  you upgrade, it is recommended that you deactivate all current activations before upgrading to {PlatformNameShort} {PlatformVers} to ensure that only new activations run after the upgrade process has completed. This prevents possibilities of orphaned containers running activations from the previous version.
