AAP-13268 updated based on peer review

--- a/downstream/modules/platform/con-controller-system-level-monitoring.adoc
+++ b/downstream/modules/platform/con-controller-system-level-monitoring.adoc
@@ -6,4 +6,4 @@ Monitoring the CPU and memory utilization of your cluster hosts is important bec
 
 If CPU or memory usage is very high, consider lowering the capacity adjustment (available on the instance detail page) on affected instances in the {ControllerName}. This will limit how many jobs are run on or controlled by this instance.
 
-Monitor the disk I/O and utilization of your system. The manner in which an {ControllerName} node runs Ansible and caches output on the file system, and eventually saves it in the database, creates high levels of disk reads and writes. Identifying poor disk performance early can help prevent poor user experience and system degradation.
+Monitor the disk I/O and use of your system. The manner in which an {ControllerName} node runs Ansible and caches output on the file system, and eventually saves it in the database, creates high levels of disk reads and writes. Identifying poor disk performance early can help prevent poor user experience and system degradation.
