--- a/downstream/modules/platform/ref-controller-web-service-tuning.adoc
+++ b/downstream/modules/platform/ref-controller-web-service-tuning.adoc
@@ -9,7 +9,7 @@ To scale {ControllerName}'s web service, follow these best practices:
 * Deploy multiple control nodes and use a load balancer to spread web requests over multiple servers.
 * Set max connections per {ControllerName} to 100.
 
-To optimize {ControllerName}’s web service on the client side, follow these guidelines:
+To optimize {ControllerName}'s web service on the client side, follow these guidelines:
 
 * Direct user to use dynamic inventory sources instead of individually creating inventory hosts by using the API.
 * Use webhook notifications instead of polling for job status.
