--- a/downstream/modules/platform/ref-scaling-hop-nodes.adoc
+++ b/downstream/modules/platform/ref-scaling-hop-nodes.adoc
@@ -2,6 +2,6 @@
 
 = Benefits of scaling hop nodes
 
-Because hop nodes use very low memory and CPU, vertically scaling these nodes does not impact capacity. Monitor the network bandwidth of any hop node that serves as the sole connection between many execution nodes and the control plane. If bandwidth utilization is saturated, consider changing the network. 
+Because hop nodes use very low memory and CPU, vertically scaling these nodes does not impact capacity. Monitor the network bandwidth of any hop node that serves as the sole connection between many execution nodes and the control plane. If bandwidth use is saturated, consider changing the network. 
 
-Horizontally scaling by adding more hop nodes could provide redundancy in the event that one hop node goes down, which would allow traffic to continue to flow between the control plane and the execution nodes.
+Horizontally scaling by adding more hop nodes could provide redundancy in the event that one hop node goes down, which can allow traffic to continue to flow between the control plane and the execution nodes.
