--- a/downstream/modules/platform/ref-scaling-control-nodes.adoc
+++ b/downstream/modules/platform/ref-scaling-control-nodes.adoc
@@ -2,7 +2,7 @@
 
 = Benefits of scaling control nodes
 
-Control and hybrid nodes provide control capacity. They provide the ability to start jobs and process their output into the database. Every job is assigned a control node. In the default configuration, each job requires 1 capacity unit to control. For example, a control node with 100 capacity units can control a maximum of 100 jobs.
+Control and hybrid nodes provide control capacity. They provide the ability to start jobs and process their output into the database. Every job is assigned a control node. In the default configuration, each job requires one capacity unit to control. For example, a control node with 100 capacity units can control a maximum of 100 jobs.
 
 Vertically scaling a control node by deploying a larger virtual machine with more resources increases the following capabilities of the control plane:
 * The number of jobs that a control node can perform control tasks for, which requires both more CPU and memory
@@ -12,4 +12,4 @@ Scaling CPU and memory in the same proportion is recommended (e.g. 1 CPU: 4 GB R
 
 NOTE: Vertically scaling a control node does not automatically increase the number of workers that handle web requests.
 
-An alternative to vertically scaling is horizontally scaling by deploying more control nodes. This allows spreading control tasks across more nodes as well as allowing web traffic to be spread over more nodes (given you provision a load balancer to spread requests across nodes). Horizontally scaling by deploying more control nodes in many ways can be preferable as it additionally provides for more redundancy and workload isolation in the event that a control node goes down or experiences higher than normal load.
+An alternative to vertically scaling is horizontally scaling by deploying more control nodes. This allows spreading control tasks across more nodes as well as allowing web traffic to be spread over more nodes, given that you provision a load balancer to spread requests across nodes. Horizontally scaling by deploying more control nodes in many ways can be preferable as it additionally provides for more redundancy and workload isolation in the event that a control node goes down or experiences higher than normal load.
