AAP-13268 additional updates

--- a/downstream/modules/platform/con-controller-metrics-monitor-controller.adoc
+++ b/downstream/modules/platform/con-controller-metrics-monitor-controller.adoc
@@ -7,8 +7,8 @@ Monitor your {ControllerName} hosts at the system and application levels.
 System level monitoring includes the following information:
 
 * Disk I/O
-* RAM utilization
-* CPU utilization
+* RAM use
+* CPU use
 * Network traffic 
 
 Application level metrics provide data that the application knows about the system. This data includes the following information: 
