AAP-13268 additional updates

--- a/downstream/modules/platform/con-controller-tuning.adoc
+++ b/downstream/modules/platform/con-controller-tuning.adoc
@@ -4,7 +4,7 @@
 
 You can configure many {ControllerName} settings by using the {ControllerName} UI, API, and file based settings including:
 
-* Live events in {ControllerName} UI
+* Live events in the {ControllerName} UI
 * Job event processing
 * Control and execution node capacity 
 * Instance group and container group capacity
