--- a/downstream/modules/platform/proc-controller-managing-live-events.adoc
+++ b/downstream/modules/platform/proc-controller-managing-live-events.adoc
@@ -4,7 +4,7 @@
 
 Events are sent to any node where there is a UI client subscribed to a job. This task is expensive, and becomes more expensive as the number of events that the cluster is producing increases and the number of control nodes increases, because all events are broadcast to all nodes regardless of how many clients are subscribed to particular jobs.
 
-To reduce the overhead of displaying live events in UI, administrators can choose to either:
+To reduce the overhead of displaying live events in the UI, administrators can choose to either:
 
 * Disable live streaming events.
 * Reduce the number of events shown per second or before truncating or hiding events in the UI.
