--- a/downstream/modules/platform/ref-controller-capacity-planning-exercise.adoc
+++ b/downstream/modules/platform/ref-controller-capacity-planning-exercise.adoc
@@ -12,7 +12,7 @@ For this example, the cluster must support the following capacity:
 * Forks set to 5 on playbooks. This is the default.
 * Average event size is 1 Mb
 
-The virtual machines will have 4 CPU and 16 GB RAM, and disks that have 3000 IOPs.
+The virtual machines have 4 CPU and 16 GB RAM, and disks that have 3000 IOPs.
 
 include::ref-controller-example-workload-reqs.adoc[leveloffset=+1]
 
