--- a/downstream/modules/platform/ref-controller-example-workload-reqs.adoc
+++ b/downstream/modules/platform/ref-controller-example-workload-reqs.adoc
@@ -22,4 +22,4 @@ For this example capacity planning exercise, use the following workload requirem
 
 *Determining quantity of execution and control nodes needed*
 
-To determine how many execution and control nodes you will need, reference the experimental results in the following table that shows the observed event processing rate of a single control node with 5 execution nodes of equal size (API Capacity column). The default “forks” setting of job templates is 5, so using this default, the maximum number of jobs a control node can dispatch to execution nodes will make 5 execution nodes of equal CPU/RAM use 100% of their capacity, arriving to the previously mentioned 1:5 ratio of control to execution capacity.
+To determine how many execution and control nodes you need, reference the experimental results in the following table that shows the observed event processing rate of a single control node with 5 execution nodes of equal size (API Capacity column). The default “forks” setting of job templates is 5, so using this default, the maximum number of jobs a control node can dispatch to execution nodes makes 5 execution nodes of equal CPU/RAM use 100% of their capacity, arriving to the previously mentioned 1:5 ratio of control to execution capacity.
