--- a/downstream/modules/platform/ref-controller-settings-to-modify-events.adoc
+++ b/downstream/modules/platform/ref-controller-settings-to-modify-events.adoc
@@ -12,8 +12,8 @@ If you cannot disable live streaming of events because of their size, reduce the
 
 *Settings available by using file based settings*:
 
-* `MAX_UI_JOB_EVENTS`: number of events to display. This setting hides the rest of the events in the list. 
-* `MAX_EVENT_RES_DATA`: the maximum size of the ansible callback event's "res" data structure.The "res" is the full "result" of the module. When the maximum size of ansible callback events is reached, then the remaining output will be truncated. Default value is 700000 bytes.
+* `MAX_UI_JOB_EVENTS`: Number of events to display. This setting hides the rest of the events in the list. 
+* `MAX_EVENT_RES_DATA`: The maximum size of the ansible callback event's "res" data structure.The "res" is the full "result" of the module. When the maximum size of ansible callback events is reached, then the remaining output will be truncated. Default value is 700000 bytes.
 * `LOCAL_STDOUT_EXPIRE_TIME`: The amount of time before a stdout file is expired and removed locally.
 
 .Additional resources
