--- a/downstream/modules/platform/ref-controller-performance-troubleshooting.adoc
+++ b/downstream/modules/platform/ref-controller-performance-troubleshooting.adoc
@@ -31,5 +31,5 @@ Internal cluster routing can impact network performance. For more information, s
 
 *Database storage does not stop growing.*
 
-* {ControllerNameStart} has a management job titled “Cleanup Job Details”. By default, it is set to keep 120 days of data and to run once a week. Job data can be voluminous. To reduce the amount of data in the database, you can shorten the retention time. For more information, see xref:proc-controller-remove-old-activity-stream[Removing Old Activity Stream Data].
+* {ControllerNameStart} has a management job titled “Cleanup Job Details”. By default, it is set to keep 120 days of data and to run once a week. To reduce the amount of data in the database, you can shorten the retention time. For more information, see xref:proc-controller-remove-old-activity-stream[Removing Old Activity Stream Data].
 * Running the cleanup job deletes the data in the database. However, the database must at some point performs its vacuuming operation which reclaims storage. See xref:ref-controller-database-settings[PostgreSQL database configuration and maintenance for {ControllerName}] for more information about database vacuuming.
