--- a/downstream/modules/aap-hardening/con-aap-patch-automation.adoc
+++ b/downstream/modules/aap-hardening/con-aap-patch-automation.adoc
@@ -3,7 +3,7 @@
 
 [id="con-aap-patch-automation_{context}"]
 
-= {PlatformNameShort} patch automation
+= Patch automation with {PlatformNameShort}
 
 [role="_abstract"]
 
