--- a/downstream/modules/aap-hardening/con-patch-automation.adoc
+++ b/downstream/modules/aap-hardening/con-patch-automation.adoc
@@ -3,7 +3,7 @@
 
 [id="con-patch-automation_{context}"]
 
-= Patch automation
+= Benefits of patch automation
 
 [role="_abstract"]
 
@@ -12,7 +12,7 @@ Automating the patching process provides a number of benefits:
 * Reduce error-prone manual effort.
 * Decrease time to deploy patches at scale.
 * Consistency of patches across similar systems.  Manual patching of similar systems could result in human error (forgetting one or more, patching using different versions) that impacts consistency.
-* Orchestration of complex patching scenarios.  
+* Orchestration of complex patching scenarios where an update may require taking a system snapshot before applying a patch or may require additional configuration changes once the patch is applied.   
 
 ////
 could use some expansion here
