--- a/downstream/modules/aap-hardening/ref-patching-examples.adoc
+++ b/downstream/modules/aap-hardening/ref-patching-examples.adoc
@@ -7,9 +7,7 @@
 
 [role="_abstract"]
 
-Generally, it is a good idea to test OS updates on a subset of systems to make sure that the latest updates do not introduce problems with production applications.
-
-All of the following playbooks are meant to be examples, and should be modified and tested thoroughly before being used in a production environment.  The following examples use the ansible.builtin.dnf module for managing packages on RHEL and other operating systems that use the dnf package manager.
+The following playbooks are meant to be examples, and should be modified to fit the target environment and tested thoroughly before being used in production.  The examples use the `ansible.builtin.dnf` module for managing packages on RHEL and other operating systems that use the dnf package manager.  Modules for patching other Linux operating systems, Microsoft Windows, and many network devices are also available.
 
 
 
