AAP-14811 updated section 4.5

--- a/downstream/modules/aap-hardening/ref-specifying-package-versions.adoc
+++ b/downstream/modules/aap-hardening/ref-specifying-package-versions.adoc
@@ -36,4 +36,4 @@ For production systems, a well-established configuration management practice is 
       - ansible_distribution_major_version == "9"
 -----
 
-NOTE: By setting `allow_downgrade`: *true*, if a newer version of any defined package is installed on the system, it will be downgraded to the specified version instead.
+NOTE: By setting `allow_downgrade: true`, if a newer version of any defined package is installed on the system, it will be downgraded to the specified version instead.
