--- a/downstream/modules/aap-hardening/ref-keeping-everything-up-to-date.adoc
+++ b/downstream/modules/aap-hardening/ref-keeping-everything-up-to-date.adoc
@@ -7,7 +7,7 @@
 
 [role="_abstract"]
 
-For some RHEL servers, such as lab or other non-production systems, there may be a desire to install all available patches on a regular cadence.  The following example playbook might be used in a job template that is scheduled to run weekly, and will update the system with all of the latest RPMs.
+For some RHEL servers, such as a lab or other non-production systems, there may be a desire to install all available patches on a regular cadence.  The following example playbook might be used in a job template that is scheduled to run weekly, and will update the system with all of the latest RPMs.
 
 -----
 ---
