AAP-18896B Removed instance of EDA and updated attributes for automation controller

--- a/downstream/modules/platform/con-aap-example-architecture.adoc
+++ b/downstream/modules/platform/con-aap-example-architecture.adoc
@@ -17,7 +17,7 @@ The architecture for this example consists of the following:
 * An optional hop node to connect {ControllerName} to execution nodes
 * A two node automation hub cluster
 //* A single node EDA controller cluster
-* A single PostgreSQL database connected to the {ControllerName}, {HubName}, and EDA controller clusters
+* A single PostgreSQL database connected to the {ControllerName} and {HubName}
 * Two execution nodes per automation controller cluster
 
 .Example {PlatformNameShort} {PlatformVers} architecture
