Second commit, corrections to controller admin guide

--- a/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
+++ b/downstream/modules/platform/proc-controller-set-up-generic-oidc.adoc
@@ -20,7 +20,7 @@ To obtain the credentials needed to set up OIDC with {ControllerName}, see the d
 +
 [NOTE]
 ====
-Team and organization mappings for OIDC is currently not supported. 
+Team and organization mappings for OIDC are currently not supported. 
 The OIDC adapter does authentication only and not authorization. 
 It is only capable of authenticating whether this user is who they say they are. 
 It does not authorize what this user is enabled to do.
