Peer review edit

--- a/downstream/modules/platform/proc-controller-adding-an-instance.adoc
+++ b/downstream/modules/platform/proc-controller-adding-an-instance.adoc
@@ -31,7 +31,7 @@ image:instances_create_details.png[Create Instance details]
 +
 [NOTE]
 ====
-The following steps are intended to be run from any computer that has SSH access to the newly created instance. 
+The following steps are to be run from any computer that has SSH access to the newly created instance. 
 It should not be run from a machine that is part of the {PlatformNameShort} deployment.
 ====
 +
