AAP-19195: Removed single-tenant references

--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -10,7 +10,7 @@
 
 {LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content.
 
-{LightspeedShortName} is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your single-tenant {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
+{LightspeedShortName} is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
 
 == Benefits of using {LightspeedShortName}
 {LightspeedFullName} offers the following benefits: 
