--- a/lightspeed/modules/con_training-data.adoc
+++ b/lightspeed/modules/con_training-data.adoc
@@ -6,7 +6,7 @@
 
 == Models
 
-{LightspeedFullName} uses single-tenant Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. 
+{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization. These models are provided, managed, and maintained by IBM. 
 
 You can use the Ansible-specific IBM watsonx Granite model as the default model for{LightspeedShortName}, so that all Ansible Lightspeed users in your organization can use the fine-tuned model. 
 
