--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
@@ -19,7 +19,7 @@ This release includes the following key features that were implemented in {Light
 
 * *Ansible-specific {ibmwatsonxcodeassistant} models*
 +
-{LightspeedFullName} uses Ansible-specific, single-tenant IBM watsonx Granite models unique to your organization, which are provided, managed, and maintained by IBM.
+{LightspeedFullName} uses Ansible-specific IBM watsonx Granite models unique to your organization, which are provided, managed, and maintained by IBM.
 
 * *Single tasks and multitask generation*
 +
