feedback based on peer review

--- a/downstream/modules/platform/proc-controller-create-job-template.adoc
+++ b/downstream/modules/platform/proc-controller-create-job-template.adoc
@@ -26,7 +26,7 @@ Exceptions are noted in the following table.
 - Check: Perform a "dry run" of the playbook and report changes that would be made without actually making them.
 Tasks that do not support check mode are missed and do not not report potential changes.
 
-For more information on job types see the link:LINK IS OUT OF DATE--CAN YOU SUGGEST ANOTHER? -HH[Playbooks: Special Topics] section of the Ansible documentation.| Yes
+For more information on job types see the link:https://docs.ansible.com/ansible-core/2.16/playbook_guide/index.html[Playbooks: Special Topics] section of the Ansible documentation.| Yes
 | Inventory | Choose the inventory to be used with this job template from the inventories available to the logged in user. 
 
 A System Administrator must grant you or your team permissions to be able to use certain inventories in a job template. | Yes. 
