--- a/stories/topics/con-azure-about.adoc
+++ b/stories/topics/con-azure-about.adoc
@@ -15,9 +15,11 @@ The following Red Hat Automation Platform components are available on {AAPonAzur
 * Ansible Content Collections, including the Microsoft collection for Azure
 * Automation Execution Environment
 * Ansible content tools, including access to {InsightsName}
+* Automation mesh
 
 
 [NOTE]
 ====
-Automation mesh is not available on {AAPonAzureNameShort}.
+Automation mesh is available on {AAPonAzureNameShort}.
+Refer to the link:https://access.redhat.com/documentation/en-us/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_automation_mesh_guide/index[{PlatformName} automation mesh guide] for documentation.
 ====
