AAP-19320: Add info. About AAP and IBM WCA trial and paid plans

--- a/lightspeed/modules/con-lightspeed-about.adoc
+++ b/lightspeed/modules/con-lightspeed-about.adoc
@@ -4,13 +4,16 @@
 
 [role="_abstract"]
 
-{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. 
+{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. 
 
-{LightspeedShortName} uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} also proactively creates pull requests with code improvement recommendations for you to review, test, and apply in your Ansible content. 
+{LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform. This document specifically describes the integration of {LightspeedFullName}.
 
-{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content.
+To use {LightspeedFullName}, your organization must have:
 
-{LightspeedShortName} is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
+* A trial or paid subscription to {PlatformNameShort} 
+* A trial or paid subscription to {ibmwatsonxcodeassistant}
+
+{LightspeedShortName} uses {ibmwatsonxcodeassistant} models trained on subject matter expertise across the Ansible ecosystem, which includes {Galaxy}, GitHub, and Ansible Certified and Validated content. It is integrated with your existing Ansible developer workflows. You can use your existing Git repositories (both public and private) to train your {ibmwatsonxcodeassistant} model. You can access {LightspeedShortName} content suggestions in Visual Studio Code (VS Code) by using the Ansible VS Code extension. 
 
 == Benefits of using {LightspeedShortName}
 {LightspeedFullName} offers the following benefits: 
