--- a/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
+++ b/lightspeed/titles/lightspeed-release-notes/modules/lightspeed-rn-25oct2023.adoc
@@ -1,12 +1,23 @@
 :_content-type: CONCEPT
 
 [role="_abstract"]
-{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. {LightspeedShortName} also proactively creates pull requests with code improvement recommendations for you to review, test, and apply in your Ansible content. 
+= Overview
+{LightspeedFullName} is a generative AI service that helps automation teams create, adopt, and maintain Ansible content more efficiently. It uses natural language prompts to generate code recommendations for automation tasks based on Ansible best practices. 
+
+{LightspeedShortName} is the cloud service that enables integration of generative AI into Ansible Automation Platform. This document specifically describes the integration of {LightspeedFullName}.
+
+To use {LightspeedFullName}, your organization must have:
+
+* A trial or paid subscription to {PlatformNameShort} 
+* A trial or paid subscription to {ibmwatsonxcodeassistant}
+
 
 [id="lightspeed-key-features_{context}"]
 = 25 October 2023
 
-== What's included in {LightspeedShortName}
+== Components
+
+The following components are available for using {LightspeedShortName}:
 
 * Ansible Extension for VS Code v2.8.108
 * {AnsibleCodeBot} Technical Preview
