test edit for merge after cherry-picking

--- a/downstream/modules/dev-guide/proc-create-role.adoc
+++ b/downstream/modules/dev-guide/proc-create-role.adoc
@@ -1,7 +1,4 @@
 [id="creating-roles"]
-
-
-
 = Creating roles
 
 [role="_abstract"]
@@ -16,7 +13,7 @@ Standalone roles outside of Collections are still supported, but new roles shoul
 .Procedure
 
 . In your terminal, navigate to the `roles` directory inside a collection.
-. Create a role called `role_name` inside the collection created previously:
+. Create a role called `role_name` inside the collection:
 +
 -----
 $ ansible-galaxy role init my_role
