Azure AAP-19309 Add performance optimization

--- a/attributes/attributes.adoc
+++ b/attributes/attributes.adoc
@@ -12,6 +12,7 @@
 // AAP on Clouds
 :AAPonAzureName: Red Hat Ansible Automation Platform on Microsoft Azure
 :AAPonAzureNameShort: Ansible Automation Platform on Microsoft Azure
+:Azure: Microsoft Azure
 :AWS: Amazon Web Services
 :Market: AWS Marketplace
 :GCPMarket: GCP Marketplace
