--- a/stories/topics/con-azure-infrastructure-usage.adoc
+++ b/stories/topics/con-azure-infrastructure-usage.adoc
@@ -2,34 +2,47 @@
 
 = {AAPonAzureNameShort} infrastructure usage
 
-When you install {AAPonAzureNameShort}, the following infrastructure is deployed into your Azure subscription:
+When you install {AAPonAzureNameShort}, the following infrastructure is deployed into your {Azure} subscription:
 
-Azure Kubernetes service (AKS):: The Kubernetes cluster used to deploy {PlatformNameShort} applications and services.
-+
-**Service Shape:**
-+
-* Compute nodes: Standard_D4ds_v5 (4 vCPUs x 16 GiB)
-* Autoscaling minimum nodes: 3
-* Autoscaling maximum nodes: 20
-Managed identity:: An Azure service that enables {PlatformNameShort} components to communicate with other Azure services such as database, DNS, storage, and other services.
+Managed identity:: A {Azure} service that enables {PlatformNameShort} components to communicate with other {Azure} services such as database, DNS, storage, and other services.
 Key vault:: A secure key vault used to store secrets that are unique to the {PlatformNameShort} deployment.
-Log Analytics Workspace:: An Azure service that enables Red Hat site reliability engineers to inspect the operations of {AAPonAzureNameShort}.
+Log Analytics Workspace:: A {Azure} service that enables Red Hat site reliability engineers to inspect the operations of {AAPonAzureNameShort}.
 Private DNS Zone:: Manages local DNS requests for the services used by {AAPonAzureNameShort}.
-Azure Database for PostgreSQL:: An Azure database service used for {PlatformNameShort}’s PostgreSQL database.
-+
-**Service Shape:** 1 TB
-Storage account:: The Azure service is used for file and block storage such as local storage of projects and containers.
+Storage account:: The {Azure} service is used for file and block storage such as local storage of projects and containers.
 +
 **Service Shape:**
 +
 * StorageV2 - Standard_LRS if disaster recovery is not enabled
 * StorageV2 - Standard_GRS if disaster recovery is enabled
-Virtual network:: The Azure service is used to manage all internal networking and dependent services such as the Azure Application Gateway.
+Virtual network:: The {Azure} service is used to manage all internal networking and dependent services such as the Azure Application Gateway.
 +
 **Service Shape:** Application Gateway: WAF_v2
 
+Azure Kubernetes service (AKS):: The Kubernetes cluster used to deploy {PlatformNameShort} applications and services.
++
+**Service Shape for all AAP plan sizes:**
++
+* Compute nodes: Standard_D4ds_v5 (4 vCPUs x 16 GiB)
+* Autoscaling minimum nodes: 3
+* Autoscaling maximum nodes: 20
+Azure Database for PostgreSQL:: A {Azure} database service used for {PlatformNameShort}’s PostgreSQL database.
+The following table presents the different configuration tiers based on the plan purchased.
++
+[cols="a,a,a,a"]
+|===
+|AAP plan size (minimum node count) | Database shape configuration | Database storage | link:https://learn.microsoft.com/en-us/azure/postgresql/flexible-server/concepts-compute-storage#storage[IOPS]
+|50 | Standard_D2s_v3 | 512 GB | Provisioned 2,300; up to 3,500
+|400 | Standard_D4s_v3 | 512 GB | Provisioned 2,300; up to 3,500
+|1000 | Standard_D2s_v3 | 512 GB | Provisioned 2,300; up to 3,500
+|2500 | Standard_D2s_v3 | 512 GB | Provisioned 2,300; up to 3,500
+|5000 | Standard_D2s_v3 | 1 TB | 5000
+|10000 | Standard_D2s_v3 | 1 TB | 5000
+|===
+
 Exact infrastructure usage depends on the length of time that the managed application is deployed in your tenancy, and the automation requirements that might cause the Kubernetes cluster to autoscale to meet the demands of your workload.
 
-Microsoft provides a link:https://azure.microsoft.com/en-us/pricing/calculator/[Pricing calculator] to estimate your costs for Azure products and services.
+Microsoft provides a link:https://azure.microsoft.com/en-us/pricing/calculator/[Pricing calculator] to estimate your costs for {Azure} products and services.
 Red Hat has configured an example scenario in the pricing calculator: use the link:https://azure.com/e/d12a08795a4942c1801c610810791764[Red Hat Ansible Automation Platform on Azure Infrastructure Estimate] to tune Kubernetes expected auto scaling variables based on your organization’s workloads.
 
+If Red Hat determines that a deployment’s automation might exceed the capabilities of the current tier of the deployment,
+then Red Hat SREs will work with you to upgrade the infrastructure tier based on automation needs.
