--- a/downstream/modules/platform/proc-using-postinstall.adoc
+++ b/downstream/modules/platform/proc-using-postinstall.adoc
@@ -43,7 +43,7 @@ git@<host>:<repo>.git (public/private repository with ssh authentication)
 
 [NOTE]
 ====
-When using ssh based authentication, the installer does not configure anything for you, so you will need to configure everything on the installer node.
+When using ssh based authentication, the installer does not configure anything for you, so you must configure everything on the installer node.
 ====
 
 Definition files use the link:https://console.redhat.com/ansible/automation-hub/namespaces/infra/[infra certified collections]. The link:https://console.redhat.com/ansible/automation-hub/repo/validated/infra/controller_configuration/[controller_configuration] collection is preinstalled as part of the installation and uses the installation controller credentials you supply in the inventory file for access into the {PlatformNameShort} controller. You simply need to give the YAML configuration files. 
