--- a/downstream/modules/platform/proc-using-postinstall.adoc
+++ b/downstream/modules/platform/proc-using-postinstall.adoc
@@ -31,7 +31,7 @@ controller_postinstall_dir=/full_path_to_where_you_want_the pulled_content_to_re
 ----
 +
 
-. The controller_postinstall_repo_url variable can be used to define the postinstall repository URL which may include authentication information.
+. The controller_postinstall_repo_url variable can be used to define the postinstall repository URL which must include authentication information.
 
 +
 ----
