--- a/downstream/modules/hub/proc-create-api-token-pah.adoc
+++ b/downstream/modules/hub/proc-create-api-token-pah.adoc
@@ -12,7 +12,7 @@ In {PrivateHubName}, you can create an API token using API token management. The
 .Procedure
 
 . Navigate to your {PrivateHubName}.
-. From the navigation panel, select menu:Collections[API token].
+. From the navigation panel, select {menu_api-token}.
 . Click btn:[Load Token].
 . To copy the API token, click the btn:[Copy to clipboard] icon.
 . Paste the API token into a file and store in a secure location.
