--- a/downstream/modules/hub/proc-create-super-users.adoc
+++ b/downstream/modules/hub/proc-create-super-users.adoc
@@ -12,7 +12,7 @@ If you want to spread administration across your team, you can create a super us
 
 .Procedure
 . Log in to your {PrivateHubName}.
-. From the navigation panel, select menu:User Access[Users].
+. From the navigation panel, select {menu_users}.
 . Select the user that you want to make a super user. The *User details* for that user are displayed.
 . Under *User type*, select *Super User*.
 
