testing menu attributes in EDA User Guide

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -149,7 +149,7 @@
 // Automation Decisions (aka event driven automation menu selections)
 :menu_rule-audit: menu:Automation Decisions[Views > Rule Audit]
 :menu_rulebook-activations: menu:Automation Decisions[Views > Rulebook Activations]
-:menu_decision-environments: Automation Decisions[Resources > Decision Environments]
+:menu_decision-environments: menu:Automation Decisions[Resources > Decision Environments]
 
 // Automation Infrastructure
 :menu_infrastructure-topology: menu:Automation Controller[Resources > Topology View]
