AAP-16378 modified text from SME review feedback

--- a/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
@@ -10,7 +10,7 @@ Use this procedure to configure LDAP security for your {ControllerName}.
 $ oc create secret generic <resourcename>-custom-certs \
     --from-file=ldap-ca.crt=<PATH/TO/YOUR/CA/PEM/FILE>  \ <1>
 ----
-<1> Modify this to point to where your PEM and key files are stored.
+<1> Modify this to point to where your CA cert is stored.
 +
 This will create a secret that looks like this:
 +
