Consolidated inventory file examples
Removed and rearranged inventory files and contents in Chapt 3 of Installation Guide

Install Guide Scenario Consolidation

https://issues.redhat.com/browse/AAP-18700

--- a/downstream/modules/platform/con-install-scenario-examples.adoc
+++ b/downstream/modules/platform/con-install-scenario-examples.adoc
@@ -4,5 +4,5 @@
 
 
 [role="_abstract"]
-Red Hat supports several installation scenarios for {PlatformNameShort}. Review the following examples and select those suitable for your preferred installation scenario.
+Red Hat supports several installation scenarios for {PlatformNameShort}. Review the following examples and select the example suitable for your preferred installation scenario.
  
