Consolidated inventory file examples
Corrections

Install Guide Scenario Consolidation

https://issues.redhat.com/browse/AAP-18700

--- a/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-scenario.adoc
@@ -24,7 +24,7 @@ There are several supported installation scenarios for {PlatformName}. To instal
 * xref:ref-standlone-controller-hub-ext-database-inventory_platform-install-scenario[Single {HubName} with external (installer managed) database]
 
 //* xref:ref-standalone-hub-ext-database-customer-provided_platform-install-scenario[Single {HubName} with external (customer provided) database]
-* xref:ref-ldap-config-on-pah_platform-install-scenario[LDAP configuration on {PrivateHubName}]
+// xref:ref-ldap-config-on-pah_platform-install-scenario[LDAP configuration on {PrivateHubName}]
 * xref:ref-single-controller-hub-eda-with-managed-db[]
 
 
