Consolidated inventory file examples
Corrections. Changed levels and moved modules.

Install Guide Scenario Consolidation

https://issues.redhat.com/browse/AAP-18700

--- a/downstream/modules/platform/ref-connect-hub-to-rhsso.adoc
+++ b/downstream/modules/platform/ref-connect-hub-to-rhsso.adoc
@@ -1,6 +1,6 @@
 [id="ref-connect-hub-to-rhsso"]
 
-== Connecting {HubName} to a {RHSSO} environment
+= Connecting {HubName} to a {RHSSO} environment
 
 You can configure the inventory file further to connect {HubName} to a {RHSSO} installation.
 
