AAP-17190 Create devtools collections assembly

--- a/downstream/titles/dev-guide/master.adoc
+++ b/downstream/titles/dev-guide/master.adoc
@@ -27,6 +27,7 @@ include::dev-guide/assembly-setting-up-dev-environment.adoc[leveloffset=+1]
 include::dev-guide/assembly-creating-content.adoc[leveloffset=+1]
 include::dev-guide/assembly-migrating-existing-content.adoc[leveloffset=+1]
 include::navigator/assembly-executing-content.adoc[leveloffset=+1]
+include::dev-guide/assembly-creating-collection.adoc[leveloffset=+1]
 
 
 == Conclusion
