changes based on SME feedback

--- a/downstream/modules/builder/ref-definition-file-images.adoc
+++ b/downstream/modules/builder/ref-definition-file-images.adoc
@@ -2,7 +2,7 @@
 
 = Images
 
-The `images` section of the definition file is a dictionary used to define the base image. Verification of signed container images is supported with the `podman` container runtime.
+The `images` section of the definition file identifies the base image. Verification of signed container images is supported with the `podman` container runtime.
 
 See the following table for a list of values that can be used in `images`:
 
