Update Contributing in README

--- a/README.adoc
+++ b/README.adoc
@@ -111,13 +111,13 @@ To submit an update:
 . Fetch the latest changes.
 
    -----
-   $ git fetch upstream
+   $ git fetch origin
    -----
 
-. Check out a branch from upstream/master
+. Check out a branch from origin/main
 
 -----
-$ git checkout -b <new-branch> upstream/master
+$ git checkout -b <new-branch> origin/main
 -----
 
 . Make your edits.
