Create Getting Started with Ansible Playbooks guide
Added test assembly and module

Create Getting Started with Ansible Playbooks Guide

https://issues.redhat.com/browse/AAP-18980

--- a/downstream/titles/playbooks/assemblies/playbooks/assembly-playbook-gs.adoc
+++ b/downstream/titles/playbooks/assemblies/playbooks/assembly-playbook-gs.adoc
@@ -1,3 +1,5 @@
-[id="assembly-plaaybook-gs"]
+[id="assembly-playbook-gs"]
 
 = Ansible Playbooks
+
+include::modules/con-playbooks-gs.adoc[leveloffset=+1]
