Create getting started with Ansible Playbooks guides
Corrections

Create Getting Started with Ansible Playbooks Guide

https://issues.redhat.com/browse/AAP-18980

--- a/downstream/titles/playbooks/playbooks-getting-started/master.adoc
+++ b/downstream/titles/playbooks/playbooks-getting-started/master.adoc
@@ -12,7 +12,7 @@ include::attributes/attributes.adoc[]
 
 Thank you for your interest in {PlatformName}. {PlatformNameShort} is a commercial offering that helps teams manage complex multi-tier deployments by adding control, knowledge, and delegation to Ansible-powered environments.
 
-This guide provides an introduction to the use of Ansible Playbooks.
+This guide provides an introduction to the use of Ansible Playbooks..
 
 include::playbooks/assembly-playbook-gs.adoc[leveloffset=+1]
 
