--- a/downstream/modules/hub/proc-configuring-the-client-to-verify-signatures.adoc
+++ b/downstream/modules/hub/proc-configuring-the-client-to-verify-signatures.adoc
@@ -13,53 +13,57 @@ In order to ensure a container image pulled from the remote registry is properly
 . Open your terminal and use the following command: 
 +
 ----
->  sudo <name of editor> __/etc/containers/policy.json
+>  sudo <name of editor> /etc/containers/policy.json
 ----
 +
 The file that is displayed is similar to this:
 +
 ----
-    {
-        "default": [{"type": "reject"}],
-        "transports": {
-            "docker": {
-              "quay.io": [{"type": "insecureAcceptAnything}],
-              "docker.io": [{"type": "insecureAcceptAnything}],
-              "_<server-address>_": [
-                {
-                    "type": "signedBy",
-                    "keyType": "GPGKeys",
-                    "keyPath": "/tmp/containersig.txt"
-    }
+{
+  "default": [{"type": "reject"}],
+  "transports": {
+  	"docker": {
+    	"quay.io": [{"type": "insecureAcceptAnything"}],
+    	"docker.io": [{"type": "insecureAcceptAnything"}],
+    	"<server-address>": [
+      	{
+          	    "type": "signedBy",
+          	    "keyType": "GPGKeys",
+          	    "keyPath": "/tmp/containersig.txt"
+      	}]
+  	}
+  }
+}
 ----
 +
 This file shows that neither `quay.io`, or `docker.io` will perform the verification, because the type is `insecureAcceptAnything` which overrides the default type of `reject`. However, `_<server-address>_` will perform the verification, because the parameter `type` is set to `"signedBy"`.
 +
 [NOTE]
 ====
-The only `keyType`` currently supported is GPG keys.
+The only `keyType` currently supported is GPG keys.
 ====
 +
 . Under the `_<server-address>_` entry, modify the `keyPath` <1> to include the
 name of your key file.
 +
 ----
-    {
-        "default": [{"type": "reject"}],
-        "transports": {
-            "docker": {
-              "quay.io": [{"type": "insecureAcceptAnything}],
-              "docker.io": [{"type": "insecureAcceptAnything}],
-              "_<server-address>_1": [
-                {
-                    "type": "signedBy",
-                    "keyType": "GPGKeys",
-                    "keyPath": "/tmp/<key file name", <1>
-                    "signedIdentity": {
-                      "type": "remapIdentity",
-                      "prefix": "_<server-address>_",
-                      "signedPrefix": "0.0.0.0:8002"
-    }
+{
+    	"default": [{"type": "reject"}],
+    	"transports": {
+        	"docker": {
+          	  "quay.io": [{"type": "insecureAcceptAnything"}],
+          	  "docker.io": [{"type": "insecureAcceptAnything"}],
+          	  "<server-address>": [{
+                	"type": "signedBy",
+                	"keyType": "GPGKeys",
+                	"keyPath": "/tmp/<key file name>",
+                	"signedIdentity": {
+                  	  "type": "matchExact"
+                    }
+            	  }]
+            }
+    	}
+}
 ----
 +
 . Save and close the file.
@@ -68,8 +72,10 @@ name of your key file.
 * Pull the file using Podman, or your client of choice:
 
 ----
-> podman pull _<server-address>_/<container-name>:<tag name>
---tls-verify=false
+> podman pull <server-address>/<container-name>:<tag name> --tls-verify=false
 ----
 
 This response verifies the image has been signed with no errors. If the image is not signed, the command will fail.
+
+.Additional resources
+* For more information about policy.json, see link:https://github.com/containers/image/blob/main/docs/containers-policy.json.5.md#signedby[documentation for containers-policy.json]. 
